WORKS AS INTENDED (maybe) - tests to be fixed